[package]
name = "chia-traits"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Chia traits for Streamable types (chia's serialization format)"
authors = ["Arvid Norberg <arvid@chia.net>"]

[lints]
workspace = true

[features]
py-bindings = ["dep:pyo3"]
serde = ["dep:serde"]

[dependencies]
pyo3 = { workspace = true, features = ["multiple-pymethods"], optional = true }
chia_streamable_macro = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0.204", features = ["derive"], optional = true }